--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a car nut</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Victorville, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Working on my car and pc</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game Dev</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kingman, AZ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love to work with computers</p>
     </section>
 
     <footer id="footer">
